Add Favorite Movies section with logic

--- a/MoviesListFeature/Sources/MoviesListFeature/Resources/Localization/en.lproj/Localizable.strings
+++ b/MoviesListFeature/Sources/MoviesListFeature/Resources/Localization/en.lproj/Localizable.strings
@@ -6,6 +6,11 @@
   
 */
 
+/* Tab View */
+
+"tabView.moviesList.title" = "Список фильмов";
+"tabView.favoriteMovies.title" = "Избранное";
+
 /* Movies List */
 
 "moviesList.navigationTitle" = "MOVIESLIST";
@@ -13,6 +18,12 @@
 /* Movie details */
 
 "movieDetails.overview.title" = "Overview";
+"movieDetails.favoriteButton.on.title" = "Make Favorite";
+"movieDetails.favoriteButton.off.title" = "Favorite";
+
+/* Favorite movies */
+
+"favoriteMovies.navigationTitle" = "Favorites";
 
 /* Other */
 
