Fixed localization mismatch

--- a/MoviesListFeature/Sources/MoviesListFeature/Resources/Localization/ru.lproj/Localizable.strings
+++ b/MoviesListFeature/Sources/MoviesListFeature/Resources/Localization/ru.lproj/Localizable.strings
@@ -8,8 +8,8 @@
 
 /* Tab View */
 
-"tabView.moviesList.title" = "Movies List";
-"tabView.favoriteMovies.title" = "Favorite Movies";
+"tabView.moviesList.title" = "Список фильмов";
+"tabView.favoriteMovies.title" = "Избранное";
 
 /* Movies List */
 
